## [3.0-RC7] 2016-03-14 Mohameth François Sy
### Added fields
* Added the field /agents.contributors.affiliations field which groups former /agents.contributors.organisation_ref and /agents.contributors.laboratory fields
  All contributor's affiliations are now grouped in one array /agents.contributors.affiliations


## [3.0-RC6] 2016-03-03 Yuri Katkov / Samuel Kerrien /  Lomig Mégard / Mohameth François Sy
### Added fields
* Added the field activities.protocol.id field
* Add resources.retrieval_date field. This date corresponds to when the resources was downloaded from a source. 

### Updated fields
* Registration.data_providers became Registration.agents object with 'id' and 'roles' fields.
* The rational of this change is to separate agents with experimental roles (involved in activities) from those involved as principal investigator or data provider.
* Made specimen.age, specimen.name, specimen.sex and resources.mime-type fields optional
* Update the following resolution field names: res_x = anterior_posterior, res_y = superior_inferior, res_z = left_right


## [3.0-RC5] 2016-03-01 Yuri Katkov / Samuel Kerrien /  Lomig Mégard / Catherine Zwahlen
### Updated fields
* Protocol_description became protocol with description, title  and list of publications. The reason to bring in the title is that we want laboratories to reuse their existing protocols. The reason for the list of publications is to know, where does the original description of the protocol is stored
### Added fields
* attribute fields has been added for datasets and resourses. The rationale behind adding it to resourses is to store the storage-specific attributes like zenodo_id, swift_link, etc. The dataset attributes are datatype-specific parameters, like resolutions of the images.

## [3.0-RC4] 2016-02-01 Samuel Kerrien

### Updated fields
* Gave resource's size the maximum value of Long.MAX_VALUE (i.e. 9,223,372,036,854,775,807)